tests/checker/ok/dispatch_on_user_union.can
Equal = Unit

Greater = Unit

Less = Unit

Ord = Equal
  + Greater
  + Less

Described = (Ord) => String {
    Ord -> (
        * Equal => String { "equal" }
        * Greater => String { "greater" }
        * Less => String { "less" }
    )
}

Unit => Program {
    Equal()
        -> Described
        -> Print
}
