tests/checker/fail/product_construction_wrong_arity_missing.can
Birthday = Int

User = Birthday * Username

Username = String

Unit => Program {
    1
        -> User
        -> Username
        -> Print
}
